apps/jenkins/solutions/by-quest/13/k8s/environments/prod/consul-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pets
    tier: db
  name: consul
spec:
  ports:
  - port: 8500
    targetPort: http
    name: http
  selector:
    app: pets
    tier: db
  type: ClusterIP
