apps/jenkins/solutions/by-quest/13/k8s/environments/prod/pets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: pets
spec:
  rules:
    - host: pets-prod.192.168.99.100.nip.io
      http:
        paths:
          - backend:
              serviceName: pets-cluster
              servicePort: 80
            path: /
          - backend:
              serviceName: pets-cluster
              servicePort: 8080
            path: /admin
